# birdbinder

./: .dockerignore  .gitignore  AGENTS.md  API_GUIDE.md  Dockerfile  LICENSE  PRD.md  README.md  USER_GUIDE.md  birdbinder.html  commit.sh  docker-compose.yml  entrypoint.sh  renovate.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  crud.py  db.py  dependencies.py  ensure_schema.py  huey_instance.py  image.py  main.py  storage.py  types.py
backend/app/data/: birds.json  regions.json
backend/app/models/: __init__.py  activity.py  app_setting.py  binder.py  card.py  comment.py  enums.py  job.py  like.py  set.py  sighting.py  species.py  trade.py  user.py
backend/app/routers/: activity.py  auth.py  binders.py  cards.py  collection.py  jobs.py  sets.py  settings.py  sightings.py  species.py  trades.py  users.py  version.py
backend/app/schemas/: activity.py  binder.py  card.py  identification.py  job.py  set_schemas.py  sighting.py  species.py  trade.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_activity_api.py  test_activity_models.py  test_ai.py  test_auth.py  test_binders.py  test_card_gen.py  test_card_regen.py  test_card_regen_task.py  test_cards.py  test_collection.py  test_crud.py  test_debug.py  test_health.py  test_identification.py  test_identifier_task.py  test_image.py  test_manual_id.py  test_model_provenance.py  test_models.py  test_rarity.py  test_sets.py  test_settings.py  test_settings_api.py  test_sightings.py  test_species.py  test_trades.py  test_users.py  test_version.py
(+62 files in other folders)
